[gd_scene load_steps=4 format=3 uid="uid://brv52rd1tdwt0"]

[ext_resource type="Script" uid="uid://do3ubrkvn3r8n" path="res://scripts/ball.gd" id="1_7s4qf"]
[ext_resource type="AudioStream" uid="uid://c3mql8hudorto" path="res://assets/audio/phaserDown2.ogg" id="3_4dx81"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cxlvu"]
radius = 22.0

[node name="ball" type="RigidBody2D"]
mass = 0.001
gravity_scale = 0.0
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_7s4qf")
ball_speed = 700

[node name="AudioPlayer2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_4dx81")
volume_db = 5.0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_cxlvu")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
